test/manual/assignment/errors/val_reassignment_local.sol
{
    val a = 2;
    a = 3; // Should error; val's are constant
}